# security-scan

./: .env.global.template  .flake8  .gitignore  Memcrypt_env_qa.json  README.md  demo  docker-cleanup-script.sh  docker-compose.yml
.github/: get_next_tag.sh  install_acr_tag.sh  install_trivy.sh  load_push_images.sh
.github/trivy/: action.yml
.github/workflows/: DAST.yaml  backend_regression.yaml  codeql.yml  deployment.yml  e2e_tests.yaml  main.yaml  mc_cd_agentbinary.yml  mc_cd_console.yml  mc_cd_frontend.yml  mc_ci_agentbinary.yml  mc_ci_console.yml  mc_ci_frontend.yml  pr-review.yml
.postman/: api  api_b96a1e57-a51d-43c7-a68c-814fd52ea287
Agentbinary/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Agentbinary/src/app/: main.py
Agentbinary/src/app/api/: dependencies.py
Agentbinary/src/app/api/routers/: agentbinary.py
Agentbinary/src/app/config/: settings.py
Agentbinary/src/app/core/: security.py  utils.py
Agentbinary/tests/: conftest.py  test_agent_binary_api.py  test_security.py
keycloak/: .env.template  Dockerfile  Dockerfile.keycloak  Dockerfile.keycloak.postsetup  README.md  docker-compose.yml
keycloak/scripts/: 1_copy_themes.sh.unused  keycloak_memcrypt_theme.sh  keycloak_setup.sh
tests/Security/: SecurityTestSuite.xml
tests/api/assets/: sample-1.tar
tests/api/postman/collections/: Memcrypt_qa.json
tests/e2e/: .gitignore  CleanUpTestSuite.xml  End2EndTestSuite.xml  README.md  RegressionTestSuite.xml  SanityTestSuite.xml  pom.xml  runregression.ps1
tests/e2e/fileNames/: agentBinaryFileNames
(+83 files in other folders)
